# euler-math-library

./: .gitignore  CMakeLists.txt  EulerMathLibrary.sln  README.md
EulerMath/: main.cpp
EulerMathLibrary/: EulerMathLibrary.cpp  EulerMathLibrary.h  EulerMathLibrary.vcxproj  EulerMathLibrary.vcxproj.filters  Makefile  MathUtils.cpp  MathUtils.h  README.md  ReadMe.txt  dllmain.cpp  stdafx.cpp  stdafx.h  targetver.h
TestHarness/: Makefile  TestHarness.vcxproj  unittest1.cpp
